--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,7 +265,7 @@ header {
 .trekking {
   background-image: url(../img/bg-hero.svg);
   width: 100vw;
-  height: 900px;
+  height: 750px;
   margin: 0;
   padding: 0; }
 
@@ -276,21 +276,12 @@ header {
   .caja-trekking p {
     font-size: 20px; }
 
-.caracteristicas {
-  width: 100%;
-  text-align: center; }
-
 /*seccion caract*/
 .texto__caract {
-  margin-top: 50px;
   text-align: center;
   color: #221D23; }
 
-.caja-caract {
-  margin-top: 50px; }
-
 .animation-element {
-  margin-top: 50px;
   opacity: 0;
   position: relative;
   transition: all 500ms linear;
@@ -302,13 +293,16 @@ header {
   transform: translate3d(0px, 0px, 0px); }
 
 /*cajas Cartas*/
+.wrapper-card {
+  padding-left: 110px;
+  padding-bottom: 50px; }
+
 .card__imagen {
   background-image: url(../img/bg-price.svg);
   background-size: cover;
-  width: 100%;
+  width: 130%;
   height: 200px;
-  margin: 0;
-  padding: 0; }
+  margin: 0; }
 
 .card__fondo {
   background-color: #333745;
@@ -329,7 +323,8 @@ h2 {
 
 .card__precio {
   color: #fff;
-  text-align: center; }
+  text-align: center;
+  padding: 50px 0; }
 
 .card {
   background: #fff;
@@ -388,13 +383,32 @@ h2 {
     font-size: 17px; }
 
 @media (max-width: 768px) {
+  header {
+    background-image: url(../img/bg-hero.svg);
+    width: 100vw;
+    height: 900px;
+    margin: 0;
+    padding: 0; }
+
   .caja-trekking {
     width: 80%;
     margin-top: 100px; }
     .caja-trekking h1 {
       font-size: 45px; }
     .caja-trekking p {
-      font-size: 20px; } }
+      font-size: 20px; }
+
+  .wrapper-card {
+    padding-left: 0; }
+
+  .card__precio {
+    padding: 30px 0; }
+
+  .card__imagen {
+    background-image: url(../img/bg-price.svg);
+    width: 130%;
+    height: 100px;
+    margin: 0; } }
 footer {
   background-color: #221D23;
   height: 100px; }
